join.jsp Validator 추가

--- a/JSPPorject/JSPSetting/eclipse/p2/org.eclipse.equinox.p2.engine/profileRegistry/epp.package.jee.profile/.data/.settings/org.eclipse.equinox.p2.artifact.repository.prefs
+++ b/JSPPorject/JSPSetting/eclipse/p2/org.eclipse.equinox.p2.engine/profileRegistry/epp.package.jee.profile/.data/.settings/org.eclipse.equinox.p2.artifact.repository.prefs
@@ -117,6 +117,9 @@ repositories/http\:__download.eclipse.org_releases_latest/count=1
 repositories/http\:__download.eclipse.org_releases_latest/enabled=false
 repositories/http\:__download.eclipse.org_releases_latest/nickname=Latest Eclipse Release
 repositories/http\:__download.eclipse.org_releases_latest/uri=http\://download.eclipse.org/releases/latest
+repositories/http\:__download.eclipse.org_technology_m2e_releases_1.5_1.5.0.20140606-0033/enabled=true
+repositories/http\:__download.eclipse.org_technology_m2e_releases_1.5_1.5.0.20140606-0033/isSystem=false
+repositories/http\:__download.eclipse.org_technology_m2e_releases_1.5_1.5.0.20140606-0033/uri=http\://download.eclipse.org/technology/m2e/releases/1.5/1.5.0.20140606-0033
 repositories/http\:__download.eclipse.org_tools_ajdt_48_dev_update/enabled=true
 repositories/http\:__download.eclipse.org_tools_ajdt_48_dev_update/isSystem=false
 repositories/http\:__download.eclipse.org_tools_ajdt_48_dev_update/uri=http\://download.eclipse.org/tools/ajdt/48/dev/update
@@ -574,6 +577,15 @@ repositories/http\:__oneclicklabs.io_repo_eclipse_plugin_jorm/version=1.0.0
 repositories/http\:__orm.karthy.me/enabled=false
 repositories/http\:__orm.karthy.me/isSystem=false
 repositories/http\:__orm.karthy.me/uri=http\://orm.karthy.me
+repositories/http\:__propedit.sourceforge.jp_eclipse_updates/description=
+repositories/http\:__propedit.sourceforge.jp_eclipse_updates/enabled=true
+repositories/http\:__propedit.sourceforge.jp_eclipse_updates/isSystem=false
+repositories/http\:__propedit.sourceforge.jp_eclipse_updates/name=update site\: http\://propedit.sourceforge.jp/eclipse/updates/
+repositories/http\:__propedit.sourceforge.jp_eclipse_updates/provider=
+repositories/http\:__propedit.sourceforge.jp_eclipse_updates/suffix=site.xml
+repositories/http\:__propedit.sourceforge.jp_eclipse_updates/type=org.eclipse.equinox.p2.updatesite.artifactRepository
+repositories/http\:__propedit.sourceforge.jp_eclipse_updates/uri=http\://propedit.sourceforge.jp/eclipse/updates/
+repositories/http\:__propedit.sourceforge.jp_eclipse_updates/version=1
 repositories/http\:__www.apache.org_dist_geronimo_eclipse_updates/enabled=false
 repositories/http\:__www.apache.org_dist_geronimo_eclipse_updates/isSystem=false
 repositories/http\:__www.apache.org_dist_geronimo_eclipse_updates/uri=http\://www.apache.org/dist/geronimo/eclipse/updates/
