--- a/JSPPorject/JSPSetting/eclipse/p2/org.eclipse.equinox.p2.engine/profileRegistry/epp.package.jee.profile/.data/.settings/org.eclipse.equinox.p2.metadata.repository.prefs
+++ b/JSPPorject/JSPSetting/eclipse/p2/org.eclipse.equinox.p2.engine/profileRegistry/epp.package.jee.profile/.data/.settings/org.eclipse.equinox.p2.metadata.repository.prefs
@@ -162,6 +162,13 @@ repositories/http\:__download.eclipse.org_releases_latest/count=1
 repositories/http\:__download.eclipse.org_releases_latest/enabled=false
 repositories/http\:__download.eclipse.org_releases_latest/nickname=Latest Eclipse Release
 repositories/http\:__download.eclipse.org_releases_latest/uri=http\://download.eclipse.org/releases/latest
+repositories/http\:__download.eclipse.org_technology_m2e_releases_1.5_1.5.0.20140606-0033/enabled=true
+repositories/http\:__download.eclipse.org_technology_m2e_releases_1.5_1.5.0.20140606-0033/isSystem=false
+repositories/http\:__download.eclipse.org_technology_m2e_releases_1.5_1.5.0.20140606-0033/name=Maven Integration for Eclipse Update Site
+repositories/http\:__download.eclipse.org_technology_m2e_releases_1.5_1.5.0.20140606-0033/suffix=content.xml
+repositories/http\:__download.eclipse.org_technology_m2e_releases_1.5_1.5.0.20140606-0033/type=org.eclipse.equinox.internal.p2.metadata.repository.LocalMetadataRepository
+repositories/http\:__download.eclipse.org_technology_m2e_releases_1.5_1.5.0.20140606-0033/uri=http\://download.eclipse.org/technology/m2e/releases/1.5/1.5.0.20140606-0033
+repositories/http\:__download.eclipse.org_technology_m2e_releases_1.5_1.5.0.20140606-0033/version=1.0.0
 repositories/http\:__download.eclipse.org_tools_ajdt_48_dev_update/description=
 repositories/http\:__download.eclipse.org_tools_ajdt_48_dev_update/enabled=true
 repositories/http\:__download.eclipse.org_tools_ajdt_48_dev_update/isSystem=false
@@ -881,6 +888,13 @@ repositories/http\:__oneclicklabs.io_repo_eclipse_plugin_jorm/version=1.0.0
 repositories/http\:__orm.karthy.me/enabled=false
 repositories/http\:__orm.karthy.me/isSystem=false
 repositories/http\:__orm.karthy.me/uri=http\://orm.karthy.me
+repositories/http\:__propedit.sourceforge.jp_eclipse_updates/enabled=true
+repositories/http\:__propedit.sourceforge.jp_eclipse_updates/isSystem=false
+repositories/http\:__propedit.sourceforge.jp_eclipse_updates/name=update site\: http\://propedit.sourceforge.jp/eclipse/updates/
+repositories/http\:__propedit.sourceforge.jp_eclipse_updates/suffix=site.xml
+repositories/http\:__propedit.sourceforge.jp_eclipse_updates/type=org.eclipse.equinox.p2.updatesite.metadataRepository
+repositories/http\:__propedit.sourceforge.jp_eclipse_updates/uri=http\://propedit.sourceforge.jp/eclipse/updates/
+repositories/http\:__propedit.sourceforge.jp_eclipse_updates/version=1
 repositories/https\:__dl.bintray.com_subclipse_releases_javahl_1.10.4/enabled=false
 repositories/https\:__dl.bintray.com_subclipse_releases_javahl_1.10.4/isSystem=true
 repositories/https\:__dl.bintray.com_subclipse_releases_javahl_1.10.4/name=subclipse.javahl.update
