--- a/JSPPorject/workspace/.recommenders/caches/identified-project-coordinates.json
+++ b/JSPPorject/workspace/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"D:\\svn\\repos\\JSPPorject\\JSPSetting\\JDK1.8","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.6"}},"jre:jre:1.6.0"],[{"location":"C:\\Users\\ta199\\.m2\\repository\\org\\springframework\\spring-context\\4.3.11.RELEASE\\spring-context-4.3.11.RELEASE.jar","type":"JAR","hints":{}},"ABSENT"]]
